adicionado flyway, configurado ambiente, criado tabela usuario

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 spring.application.name=fiberguardian
 # Datasource
-spring.datasource.password=ranger19
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3308/fiberguardian?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/fiberguardian?createDatabaseIfNotExist=true&serverTimezone=UTC
 
 # JPA / Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#MySQL8Dialect has been deprecated; use org.hibernate.dialect.MySQLDialect instead
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+# evitar LazyInitializationException fora do contexto da JPA
+spring.jpa.open-in-view=false
+
+#flyway
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+spring.flyway.validate-on-migrate=true
+
+
