--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,6 +67,25 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Núcleo do Flyway -->
+		<dependency>
+		<groupId>org.flywaydb</groupId>
+		<artifactId>flyway-core</artifactId>
+		</dependency>
+
+		<!-- Suporte específico ao MySQL -->
+		<dependency>
+		<groupId>org.flywaydb</groupId>
+		<artifactId>flyway-mysql</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.modelmapper</groupId>
+    		<artifactId>modelmapper</artifactId>
+    		<version>3.2.3</version>
+		</dependency>		
+
 	</dependencies>
 
 	<build>
