--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -84,8 +84,18 @@
     		<groupId>org.modelmapper</groupId>
     		<artifactId>modelmapper</artifactId>
     		<version>3.2.3</version>
-		</dependency>		
+		</dependency>	
+		
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
+		<dependency>
+		<groupId>jakarta.validation</groupId>
+		<artifactId>jakarta.validation-api</artifactId>
+	   </dependency>
+ 
 	</dependencies>
 
 	<build>
