--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/fiberguardian?createDatabaseIf
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
 # evitar LazyInitializationException fora do contexto da JPA
 spring.jpa.open-in-view=false
 
