--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/fiberguardian?createDatabaseIfNotExist=true&serverTimezone=UTC
 
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
 # JPA / Hibernate
 #MySQL8Dialect has been deprecated; use org.hibernate.dialect.MySQLDialect instead
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
