--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,4 +20,6 @@ spring.jpa.open-in-view=false
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 spring.flyway.validate-on-migrate=true
 
+spring.profiles.active=dev
+
 
