Ajustes no Spring Security

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,6 +20,13 @@ spring.jpa.open-in-view=false
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 spring.flyway.validate-on-migrate=true
 
-spring.profiles.active=dev
+# Garante que o cookie JSESSIONID só será enviado via HTTPS
+server.servlet.session.cookie.secure=true
+
+# Impede que o cookie JSESSIONID seja acessado via JavaScript
+server.servlet.session.cookie.http-only=true
+
+# Restringe o envio do cookie apenas para requisições do mesmo site (protege contra CSRF via navegação cruzada)
+server.servlet.session.cookie.same-site=strict
 
 
