--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,4 +29,17 @@ server.servlet.session.cookie.http-only=true
 # Restringe o envio do cookie apenas para requisições do mesmo site (protege contra CSRF via navegação cruzada)
 server.servlet.session.cookie.same-site=strict
 
+# Habilita o HTTPS no servidor embutido
+server.port=8443
+server.ssl.enabled=true
+
+# Configurações do keystore
+server.ssl.key-store=classpath:localhost.p12
+server.ssl.key-store-password=ranger19
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=localhost
+server.ssl.key-password=ranger19
+
+# gera ao keystore para comunicao HTTPS 
+# keytool -genkeypair -alias localhost -keyalg RSA -keysize 2048 -storetype PKCS12 -keystore localhost.p12 -validity 365 -dname "CN=localhost, OU=Dev, O=MyApp, L=SaoPaulo, ST=SP, C=BR" -storepass ranger19 -keypass ranger19
 
