--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,6 +26,10 @@ server.servlet.session.cookie.secure=true
 # Impede que o cookie JSESSIONID seja acessado via JavaScript
 server.servlet.session.cookie.http-only=true
 
+# timeout de 15 minutos por inatividade
+server.servlet.session.timeout=15m
+
+
 # Restringe o envio do cookie apenas para requisições do mesmo site (protege contra CSRF via navegação cruzada)
 #server.servlet.session.cookie.same-site=strict
 server.servlet.session.cookie.same-site=lax
