--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -95,7 +95,20 @@
 		<groupId>jakarta.validation</groupId>
 		<artifactId>jakarta.validation-api</artifactId>
 	   </dependency>
- 
+
+		<!-- Springdoc OpenAPI 3 para Spring Boot 3 -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version> <!-- versão mais recente (jul/2025) -->
+		</dependency>
+
+		<!-- Apache Commons Lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
