--- a/frontend/cert/Caddyfile
+++ b/frontend/cert/Caddyfile
@@ -1,8 +1,28 @@
 localhost:443 {
     tls cert.pem key.pem
 
-    # Rota para a API do backend, incluindo CSRF token
-    reverse_proxy /fiberguardian/* https://localhost:8443 {
+    # Tudo que vai para o backend (API)
+	# toda requisição que começa com /* 
+	# será encaminhada para o backend na porta 8443.
+    reverse_proxy /login https://localhost:8443 {
+        transport http {
+            tls_insecure_skip_verify
+        }
+    }
+	
+	reverse_proxy /csrf-token https://localhost:8443 {
+        transport http {
+            tls_insecure_skip_verify
+        }
+    }
+	
+	reverse_proxy /sessao/valida https://localhost:8443 {
+        transport http {
+            tls_insecure_skip_verify
+        }
+    }
+	
+	reverse_proxy /usuarios https://localhost:8443 {
         transport http {
             tls_insecure_skip_verify
         }
