Inclusao usuario com sucesso, problema de rota nao habilitada e sessão de usuario não persistida

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -46,7 +46,8 @@ server.ssl.key-password=ranger19
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
-logging.level.edu.entra21.fiberguardian=INFO
+#logging.level.edu.entra21.fiberguardian=INFO
+logging.level.edu.entra21.fiberguardian=DEBUG
 
 logging.level.org.springframework.security.web.csrf=TRACE
 logging.level.org.springframework.security.web.csrf.CsrfFilter=TRACE
