Corrigido mensagem de erro alteracao senha, removida handling manual exception controller usuario

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -51,6 +51,7 @@ logging.level.edu.entra21.fiberguardian=DEBUG
 
 logging.level.org.springframework.security.web.csrf=TRACE
 logging.level.org.springframework.security.web.csrf.CsrfFilter=TRACE
+logging.level.org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver=DEBUG
 
 # gera ao keystore para comunicao HTTPS 
 # keytool -genkeypair -alias localhost -keyalg RSA -keysize 2048 -storetype PKCS12 -keystore localhost.p12 -validity 365 -dname "CN=localhost, OU=Dev, O=MyApp, L=SaoPaulo, ST=SP, C=BR" -storepass ranger19 -keypass ranger19
