--- a/frontend/cert/Caddyfile
+++ b/frontend/cert/Caddyfile
@@ -1,34 +1,14 @@
 localhost:443 {
     tls cert.pem key.pem
 
-    # Tudo que vai para o backend (API)
-	# toda requisição que começa com /* 
-	# será encaminhada para o backend na porta 8443.
-    reverse_proxy /login https://localhost:8443 {
+    # API do backend Spring Boot (porta 8443)
+    reverse_proxy /api/* https://localhost:8443 {
         transport http {
             tls_insecure_skip_verify
         }
     }
-	
-	reverse_proxy /csrf-token https://localhost:8443 {
-        transport http {
-            tls_insecure_skip_verify
-        }
-    }
-	
-	reverse_proxy /sessao/valida https://localhost:8443 {
-        transport http {
-            tls_insecure_skip_verify
-        }
-    }
-	
-	reverse_proxy /usuarios* https://localhost:8443 {
-		transport http {
-			tls_insecure_skip_verify
-		}
-	}
 
-    # Rota para arquivos estáticos do frontend
+    # Arquivos estáticos do frontend (HTML, JS, CSS na porta 8080)
     reverse_proxy /* https://localhost:8080 {
         transport http {
             tls_insecure_skip_verify
