Ainda implementando reset de senha, criando sessao temporaria para proteger reset senha

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.open-in-view=false
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 spring.flyway.validate-on-migrate=true
 
-# Garante que o cookie JSESSIONID só será enviado via HTTPS
+# Garante que o cookie JSESSIONID enviado via HTTPS
 server.servlet.session.cookie.secure=true
 
 # Impede que o cookie JSESSIONID seja acessado via JavaScript
@@ -37,7 +37,7 @@ server.servlet.session.cookie.same-site=lax
 server.port=8443
 server.ssl.enabled=true
 
-# Configurações do keystore
+# Configuracoes do keystore
 server.ssl.key-store=classpath:localhost.p12
 server.ssl.key-store-password=ranger19
 server.ssl.key-store-type=PKCS12
