--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,8 +29,9 @@
 	<properties>
 		<java.version>21</java.version>
     	<lombok.version>1.18.30</lombok.version>
-		
-	</properties>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+ 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -120,6 +121,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<source>21</source>
+					<target>21</target>
 				<annotationProcessorPaths>
 					<path>
 						<groupId>org.projectlombok</groupId>
