Implementado inclusao de pdf no backend

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -72,6 +72,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.519</version>
+
+		</dependency>
+
 		<!-- Núcleo do Flyway -->
 		<dependency>
 		<groupId>org.flywaydb</groupId>
