--- a/backend/src/main/resources/flyway.properties
+++ b/backend/src/main/resources/flyway.properties
@@ -1,3 +1,8 @@
-flyway.url=jdbc:mysql://localhost:3306/fiberguardian?createDatabaseIfNotExist=true&serverTimezone=UTC
-flyway.user=root
-flyway.password=root
+# flyway.url=jdbc:mysql://localhost:3306/fiberguardian?createDatabaseIfNotExist=true&serverTimezone=UTC
+# flyway.user=root
+# flyway.password=root
+
+# Flyway
+flyway.url=${FLYWAY_URL:jdbc:mysql://mariadb:3306/fiberguardian?createDatabaseIfNotExist=true&serverTimezone=UTC}
+flyway.user=${FLYWAY_USER:root}
+flyway.password=${FLYWAY_PASSWORD:root}
