commit anterior só removeu key privada key.pem do diretorio, remoto. Agora atualizando paginas Produto e Fornecedor

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,11 +52,11 @@ server.ssl.enabled=true
 # server.ssl.key-password=ranger19
 
 # SSL / Keystore
-server.ssl.key-store=${KEYSTORE_PATH:classpath:localhost.p12}
-server.ssl.key-store-password=${KEYSTORE_PASSWORD:ranger19}
+server.ssl.key-store=${KEYSTORE_PATH:classpath:keystore.p12}
+server.ssl.key-store-password=${KEYSTORE_PASSWORD:Entra21_2025}
 server.ssl.key-store-type=${KEYSTORE_TYPE:PKCS12}
-server.ssl.key-alias=${KEYSTORE_ALIAS:localhost}
-server.ssl.key-password=${KEY_PASSWORD:ranger19}
+server.ssl.key-alias=${KEYSTORE_ALIAS:fiberguardian}
+server.ssl.key-password=${KEY_PASSWORD:Entra21_2025}
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
@@ -66,6 +66,7 @@ logging.level.edu.entra21.fiberguardian=DEBUG
 logging.level.org.springframework.security.web.csrf=TRACE
 logging.level.org.springframework.security.web.csrf.CsrfFilter=TRACE
 logging.level.org.springframework.web.servlet.mvc.method.annotation.ExceptionHandlerExceptionResolver=DEBUG
+logging.level.org.springframework.web.cors=DEBUG
 
 ############################################
 # Tipo de storage a ser usado (local ou s3)
