--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ backend/.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 backend/src/main/resources/cookies.txt
+frontend/cert/key.pem
 
 ### STS ###
 *.class
