--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -87,7 +87,6 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.12.519</version>
-
 		</dependency>
 
 		<!-- API e Engine do JUnit 5 -->
@@ -144,6 +143,12 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.18.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.20.5</version>
 		</dependency>
 
 	</dependencies>
